--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
         <item name="android:background">#F06292</item>
     </style>
 
+    <style name="SubmitButton" parent="Theme.AppCompat.Light">
+        <item name="android:background">#BA68C8</item>
+    </style>
+
 </resources>
