--- a/app/src/main/res/layout/activity_display_task_details.xml
+++ b/app/src/main/res/layout/activity_display_task_details.xml
@@ -18,6 +18,7 @@
             android:id="@+id/toolbarDisplayTask"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#9C27B0"
             android:minHeight="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
 
         <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
